# entra-sso-flask-template

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: ARCHITECTURE_PROPOSAL_Entra_SSO.md
src/entra_sso_app/: __init__.py  app.py  auth.py  config.py  main.py  token_store.py
src/entra_sso_app/templates/: base.html  index.html  profile.html
tests/: test_app.py
