[project]
name = "entra-sso-app"
version = "0.1.0"
description = "Entra SSO Flask Template"
authors = [
    {name = "Henry Mbugua",email = "82150047+henrymbuguakiarie@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.14.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "msal (>=1.34.0,<2.0.0)",
    "flask-wtf (>=1.2.1,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "requests (>=2.32.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
